--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ethers": "^4.0.27",
     "instascan": "^1.0.0",
     "jsqr": "^1.2.0",
-    "qrcode": "^1.3.3"
+    "qrcode": "^1.3.3",
+    "sheetify": "^7.3.3"
   },
   "devDependencies": {
     "bankai": "^9.15.0"
